# api/routes/admin.js
@@ -27,28 +27,31 @@ router.post('/article/:id_article/delete', auth.required, adminController.admin_
 // 08   Récupérer la liste des users
 router.get('/users', auth.required, adminController.admin_users_get)
 
-// 09   Récupérer les détails d’un user et des articles écrits par ce user et les commentaires écrits par ce user
+// 09 body(firstName, lastName, email, password, role) - Création d’un user par un admin
+router.post('/user/create', auth.required, adminController.admin_user_create_post)
+
+// 10   Récupérer les détails d’un user et des articles écrits par ce user et les commentaires écrits par ce user
 router.get('/user/:id_user', auth.required, adminController.admin_user_get)
 
-// 10   body(firstName, lastName, email, password, role)  - Modifier un user
+// 11   body(firstName, lastName, email, password, role)  - Modifier un user
 router.post('/user/:id_user/update', auth.required, adminController.admin_user_update_post)
 
-// 11   Pour chaque article écrit par :id_user, supprimer tous les commentaires de cet article. Puis supprimer tous les commentaires écrits par ce :id_user, puis supprimer ce :id_user
+// 12   Pour chaque article écrit par :id_user, supprimer tous les commentaires de cet article. Puis supprimer tous les commentaires écrits par ce :id_user, puis supprimer ce :id_user
 router.post('/user/:id_user/delete', auth.required, adminController.admin_user_delete_post)
 
-// 12   Récupérer la liste des comments
+// 13   Récupérer la liste des comments
 router.get('/comments', auth.required, adminController.admin_comments_get)
 
-// 13   body(article, Contenu, date) - Créer un commentaire sur un article. Le commentateur sera ce même utilisateur
+// 14   body(article, Contenu, date) - Créer un commentaire sur un article. Le commentateur sera ce même utilisateur
 router.post('/comment/create', auth.required, adminController.admin_comment_create_post)
 
-// 14   Récupérer les détails d’un commentaire, de son article et du commentateur qui y sont liés
+// 15   Récupérer les détails d’un commentaire, de son article et du commentateur qui y sont liés
 router.get('/comment/:id_comment', auth.required, adminController.admin_comment_get)
 
-// 15   body(Contenu, date)  -  Modifier un commentaire
+// 16   body(Contenu, date)  -  Modifier un commentaire
 router.post('/comment/:id_comment/update', auth.required, adminController.admin_comment_update_post)
 
-// 16   Supprimer un commentaire
+// 17   Supprimer un commentaire
 router.post('/comment/:id_comment/delete', auth.required, adminController.admin_comment_delete_post)
 
 module.exports = router
